fix: images covering navigation

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    z-index: 10000;
 }
 
 .header-container > .logo{
